--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ cattrs==24.1.2
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
