--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+adagio==0.2.6
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.10
+aiosignal==1.3.1
+alembic==1.14.0
 anyio==4.7.0
+appdirs==1.4.4
 appnope==0.1.4
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
@@ -6,6 +12,7 @@ arrow==1.3.0
 astroid==3.3.6
 asttokens==3.0.0
 async-lru==2.0.4
+async-timeout==5.0.1
 attrs==24.2.0
 babel==2.16.0
 beautifulsoup4==4.12.3
@@ -14,10 +21,15 @@ cattrs==24.1.2
 certifi==2024.8.30
 cffi==1.17.1
 charset-normalizer==3.4.0
+cloudpickle==3.1.0
 colorama==0.4.6
+colorlog==6.9.0
 comm==0.2.2
 contourpy==1.3.1
+coreforecast==0.0.15
 cycler==0.12.1
+Cython==3.0.11
+darts==0.31.0
 debugpy==1.8.9
 decorator==5.1.1
 defusedxml==0.7.1
@@ -25,12 +37,19 @@ dill==0.3.9
 exceptiongroup==1.2.2
 executing==2.1.0
 fastjsonschema==2.21.1
+filelock==3.16.1
 flatbuffers==24.3.25
 fonttools==4.55.2
 fqdn==1.5.1
+frozenlist==1.5.0
+fs==2.4.16
+fsspec==2024.10.0
+fugue==0.9.1
+greenlet==3.1.1
 h11==0.14.0
+holidays==0.62
 httpcore==1.0.7
-httpx==0.26.0
+httpx==0.28.0
 idna==3.10
 iniconfig==2.0.0
 ipdb==0.13.13
@@ -55,41 +74,70 @@ jupyterlab==4.3.2
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 kiwisolver==1.4.7
+lightning-utilities==0.11.9
+llvmlite==0.43.0
+Mako==1.3.8
 MarkupSafe==3.0.2
 matplotlib==3.9.3
 matplotlib-inline==0.1.7
 mccabe==0.7.0
 mistune==3.0.2
+mpmath==1.3.0
+multidict==6.1.0
 nbclient==0.10.1
 nbconvert==7.16.4
 nbformat==5.10.4
 nest-asyncio==1.6.0
+networkx==3.4.2
+nfoursid==1.0.1
 notebook_shim==0.2.4
-numpy==2.2.0
+numba==0.60.0
+numpy==1.26.4
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 openmeteo_requests==1.3.0
 openmeteo_sdk==1.18.0
+optuna==4.1.0
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
+patsy==1.0.1
 pexpect==4.9.0
 pillow==11.0.0
 platformdirs==4.3.6
 pluggy==1.5.0
+pmdarima==2.0.4
+powder_alert2.0==0.0.1
 prometheus_client==0.21.1
 prompt_toolkit==3.0.48
+propcache==0.2.1
+protobuf==5.29.1
 psutil==6.1.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==18.1.0
 pycparser==2.22
 Pygments==2.18.0
 pylint==3.3.2
+pyod==2.0.2
 pyparsing==3.2.0
 pyreadstat==1.2.8
 pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-json-logger==2.0.7
+pytorch-lightning==2.4.0
 pytz==2024.2
 PyYAML==6.0.2
 pyzmq==26.2.0
@@ -101,28 +149,45 @@ rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.22.3
 savReaderWriter==3.4.2
-scikit-learn==1.5.2
+scikit-learn==1.6.0
 scipy==1.14.1
 seaborn==0.13.2
 Send2Trash==1.8.3
+shap==0.46.0
 six==1.17.0
+slicer==0.0.8
 sniffio==1.3.1
 soupsieve==2.6
+SQLAlchemy==2.0.36
 stack-data==0.6.3
+statsforecast==2.0.0
+statsmodels==0.14.4
+sympy==1.13.1
+tbats==1.1.3
+tensorboardX==2.6.2.2
 terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
 tomli==2.2.1
 tomlkit==0.13.2
+torch==2.5.1
+torchmetrics==1.6.0
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
+triad==0.9.8
+triton==3.1.0
 types-python-dateutil==2.9.0.20241206
 typing_extensions==4.12.2
 tzdata==2024.2
 uri-template==1.3.0
 url-normalize==1.4.3
 urllib3==2.2.3
+utilsforecast==0.2.10
 wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+xarray==2024.11.0
+xgboost==2.1.3
+yarl==1.18.3
