--- a/requirements.txt
+++ b/requirements.txt
@@ -221,11 +221,11 @@ statsforecast==2.0.0
 statsmodels==0.14.4
 sympy==1.13.1
 tbats==1.1.3
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorboardX==2.6.2.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.37.1
+#tensorboard==2.18.0
+#tensorboard-data-server==0.7.2
+#tensorboardX==2.6.2.2
+tensorflow-cpu==2.18.0
+#tensorflow-io-gcs-filesystem==0.37.1
 termcolor==2.5.0
 terminado==0.18.1
 text-unidecode==1.3
