--- a/requirements_prod.txt
+++ b/requirements_prod.txt
@@ -220,7 +220,7 @@ tinycss2==1.4.0
 toml==0.10.2
 tomli==2.2.1
 tomlkit==0.13.2
-torch==2.5.1
+torch==2.5.1+cpu
 torchmetrics==1.6.0
 tornado==6.4.2
 tqdm==4.67.1
